+ Notes, Thesaurus & updated dictionaries

--- a/W.O.R.D.S/Views/Dictionary.xaml
+++ b/W.O.R.D.S/Views/Dictionary.xaml
@@ -20,6 +20,8 @@
             <Setter Property="Control.Width" Value="130"/>
         </Style>
         <converters:ExampleConverter x:Key="ExampleConverter" />
+        <converters:NoteConverter x:Key="NoteConverter" />
+        <converters:NoteImageConverter x:Key="NoteImageConverter" />
     </Window.Resources>
     <Grid Background="Gainsboro">
         <Grid.RowDefinitions>
@@ -34,6 +36,7 @@
                     <Grid.RowDefinitions>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
                     </Grid.RowDefinitions>
                     <Rectangle Fill="PeachPuff" />
                     <StackPanel Grid.Row="0" Orientation="Horizontal">
@@ -41,6 +44,18 @@
                         <TextBlock Text="{Binding SelectedWord.Meaning}" Foreground="Black" Margin="2"/>
                     </StackPanel>
                     <TextBlock Grid.Row="1" Text="{Binding SelectedWord.Example.Name, Converter={StaticResource ExampleConverter}}" FontStyle="Italic" Foreground="Black" Margin="2"/>
+                    <Grid Grid.Row="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="20"></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.Column="0" Width="16" Height="16" Margin="0, 0, 2, 0" VerticalAlignment="Top" HorizontalAlignment="Left" Source="{Binding SelectedWord.Name, Converter={StaticResource NoteImageConverter}}"></Image>
+                        <TextBlock Grid.Column="1" Text="{Binding SelectedWord.Note, Converter={StaticResource NoteConverter}}" FontStyle="Italic" Foreground="Blue" Margin="2"/>
+                    </Grid>
+                    <!--StackPanel Grid.Row="2" Orientation="Horizontal">
+                        <Image Width="16" Height="16" Margin="0, 0, 2, 0" Source="{Binding SelectedWord.Name, Converter={StaticResource NoteImageConverter}}"></Image>
+                        <TextBlock Text="{Binding SelectedWord.Note, Converter={StaticResource NoteConverter}}" FontStyle="Italic" Foreground="Blue" Margin="2"/>
+                    </-->
                 </Grid>
             </ToolTipService.ToolTip>
             <ListView.View>
