--- a/W.O.R.D.S/Views/Edit.xaml
+++ b/W.O.R.D.S/Views/Edit.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:W.O.R.D.S.Views"
+        xmlns:converters="clr-namespace:W.O.R.D.S.Models.Converters"
         mc:Ignorable="d"
         Title="Edit" Height="400" Width="500" ResizeMode="NoResize" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
     <Window.Resources>
@@ -58,7 +59,14 @@
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Margin="4" HorizontalAlignment="Right" Style="{DynamicResource BoldStyle}">Example:</TextBlock>
-                <TextBox Text="{Binding Word.Example.Name}" Grid.Column="1" Margin="4"/>
+                <RichTextBox Grid.Column="1" Margin="4">
+                    <FlowDocument>
+                        <Paragraph>
+                            <Run Text="{Binding Word.Example.Left}"/><Run Text="{Binding Word.Example.Main}" FontWeight="Bold"/><Run Text="{Binding Word.Example.Right}"/><Run Text="{Binding Word.Example.Second}" FontWeight="Bold"/><Run Text="{Binding Word.Example.Final}"/>
+                        </Paragraph>
+                    </FlowDocument>
+                </RichTextBox>
+                <!--TextBox Text="{Binding Word.Example, Converter={StaticResource ExampleIndexConverter}}" Grid.Column="1" Margin="4"/-->
             </Grid>
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -100,13 +108,13 @@
                 </Grid.ColumnDefinitions>
                 <WrapPanel Grid.Column="0">
                     <TextBlock Margin="4" HorizontalAlignment="Right" Style="{DynamicResource BoldStyle}">Indexes #1:</TextBlock>
-                    <TextBox Text="{Binding Word.Example.Indexes[0][0]}" Grid.Column="1" Width="30" MaxLength="2" Margin="4"/>
-                    <TextBox Text="{Binding Word.Example.Indexes[0][1]}" Grid.Column="2" Width="30" MaxLength="2" Margin="4"/>
+                    <TextBox Text="{Binding Indexator[0]}" Grid.Column="1" Width="30" MaxLength="2" Margin="4"/>
+                    <TextBox Text="{Binding Indexator[1]}" Grid.Column="2" Width="30" MaxLength="2" Margin="4"/>
                 </WrapPanel>
                 <WrapPanel Grid.Column="1">
                     <TextBlock Margin="4" HorizontalAlignment="Right" Style="{DynamicResource BoldStyle}">Indexes #2:</TextBlock>
-                    <TextBox Text="{Binding Word.Example.Indexes[1][0]}" Grid.Column="1" Width="30" MaxLength="2" Margin="4"/>
-                    <TextBox Text="{Binding Word.Example.Indexes[1][1]}" Grid.Column="2" Width="30" MaxLength="2" Margin="4"/>
+                    <TextBox Text="{Binding Indexator[2]}" Grid.Column="1" Width="30" MaxLength="2" Margin="4"/>
+                    <TextBox Text="{Binding Indexator[3]}" Grid.Column="2" Width="30" MaxLength="2" Margin="4"/>
                 </WrapPanel>
             </Grid>
         </StackPanel>
