--- a/W.O.R.D.S/Views/Edit.xaml
+++ b/W.O.R.D.S/Views/Edit.xaml
@@ -117,6 +117,14 @@
                     <TextBox Text="{Binding Indexator[3]}" Grid.Column="2" Width="30" MaxLength="2" Margin="4"/>
                 </WrapPanel>
             </Grid>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Margin="4" HorizontalAlignment="Right" Style="{DynamicResource BoldStyle}">Thesaurus:</TextBlock>
+                <TextBox Text="{Binding Word.Note}" Grid.Column="1" Margin="4"/>
+            </Grid>
         </StackPanel>
         <DockPanel Grid.Row="1" VerticalAlignment="Bottom" Margin="4">
             <Button Command="{Binding OKCommand}" Background="ForestGreen" IsDefault="True" FontWeight="Bold" Width="242" Height="24">СОХРАНИТЬ</Button>
