--- a/W.O.R.D.S/Views/Card.xaml
+++ b/W.O.R.D.S/Views/Card.xaml
@@ -111,11 +111,11 @@
             </DockPanel>
             <DockPanel Visibility="{Binding Mode.Presenter.ShowExampleVisible}">
                 <TextBlock TextWrapping="Wrap" Style="{StaticResource ExampleStyle}">
-                <Run Text="{Binding Mode.Word.Example.Left}" FontSize="18" FontStyle="Italic"></Run>
-                <Run Text="{Binding Mode.Word.Example.Main}" FontSize="20" FontStyle="Italic" FontWeight="Bold"></Run>
-                <Run Text="{Binding Mode.Word.Example.Right}" FontSize="18" FontStyle="Italic"></Run>
-                <Run Text="{Binding Mode.Word.Example.Second}" FontSize="20" FontStyle="Italic" FontWeight="Bold"></Run>
-                <Run Text="{Binding Mode.Word.Example.Final}" FontSize="18" FontStyle="Italic"></Run>
+                <Run Text="{Binding ShownExample.Left}" FontSize="18" FontStyle="Italic"></Run>
+                <Run Text="{Binding ShownExample.Main}" FontSize="20" FontStyle="Italic" FontWeight="Bold"></Run>
+                <Run Text="{Binding ShownExample.Right}" FontSize="18" FontStyle="Italic"></Run>
+                <Run Text="{Binding ShownExample.Second}" FontSize="20" FontStyle="Italic" FontWeight="Bold"></Run>
+                <Run Text="{Binding ShownExample.Final}" FontSize="18" FontStyle="Italic"></Run>
                 </TextBlock>
             </DockPanel>
         </StackPanel>
@@ -136,7 +136,7 @@
             <TextBlock Text="{Binding Answer, Converter={StaticResource AnswerConverter}}" Foreground="{Binding Answer, Converter={StaticResource ColorConverter}}" Visibility="{Binding Mode.Presenter.TypingBottomVisible}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="26" Margin="8"></TextBlock>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBlock Text="{Binding Mode.Word.Example.Left}" VerticalAlignment="Center" FontSize="20" Visibility="{Binding Mode.Presenter.ContextVisible}"></TextBlock>
+                <TextBlock Text="{Binding ShownExample.Left}" VerticalAlignment="Center" FontSize="20" Visibility="{Binding Mode.Presenter.ContextVisible}"></TextBlock>
             
                 <TextBox Text="{Binding EditText,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Width="200" Height="36" Background="PaleGreen" IsEnabled="{Binding ElementsEnabled}" MaxLength="{Binding Mode.Word.Name.Length}" Visibility="{Binding Mode.Presenter.EditVisible}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20" Margin="8">
                     <TextBox.InputBindings>
@@ -176,7 +176,7 @@
                     </TextBox.Template>
                 </TextBox>
 
-                <TextBlock Text="{Binding Mode.Word.Example.Right}" FontSize="20" VerticalAlignment="Center" Visibility="{Binding Mode.Presenter.ContextVisible}"></TextBlock>
+                <TextBlock Text="{Binding ShownExample.Right}" FontSize="20" VerticalAlignment="Center" Visibility="{Binding Mode.Presenter.ContextVisible}"></TextBlock>
 
                 <TextBox Text="{Binding SecondEditText,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Width="200" Height="36" Background="PaleGreen" IsEnabled="{Binding ElementsEnabled}" MaxLength="{Binding Mode.Word.Example.Second.Length}" Visibility="{Binding Mode.Presenter.SecondEditVisible}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20" Margin="8">
                     <TextBox.InputBindings>
@@ -216,7 +216,7 @@
                     </TextBox.Template>
                 </TextBox>
 
-                <TextBlock Text="{Binding Mode.Word.Example.Final}" FontSize="20" VerticalAlignment="Center" Visibility="{Binding Mode.Presenter.ContextVisible}"></TextBlock>
+                <TextBlock Text="{Binding ShownExample.Final}" FontSize="20" VerticalAlignment="Center" Visibility="{Binding Mode.Presenter.ContextVisible}"></TextBlock>
             </StackPanel>
 
             <DockPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="8" Visibility="{Binding Mode.Presenter.TypingBottomVisible}">
@@ -225,11 +225,11 @@
             </DockPanel>
             <DockPanel Visibility="{Binding Mode.Presenter.ShowExampleVisible}">
                 <TextBlock TextWrapping="Wrap" Style="{StaticResource ExampleStyle}" Visibility="{Binding Mode.Presenter.TypingBottomVisible}">
-                <Run Text="{Binding Mode.Word.Example.Left}" FontSize="18" FontStyle="Italic"></Run>
-                <Run Text="{Binding Mode.Word.Example.Main}" FontSize="20" FontStyle="Italic" FontWeight="Bold"></Run>
-                <Run Text="{Binding Mode.Word.Example.Right}" FontSize="18" FontStyle="Italic"></Run>
-                <Run Text="{Binding Mode.Word.Example.Second}" FontSize="20" FontStyle="Italic" FontWeight="Bold"></Run>
-                <Run Text="{Binding Mode.Word.Example.Final}" FontSize="18" FontStyle="Italic"></Run>
+                <Run Text="{Binding ShownExample.Left}" FontSize="18" FontStyle="Italic"></Run>
+                <Run Text="{Binding ShownExample.Main}" FontSize="20" FontStyle="Italic" FontWeight="Bold"></Run>
+                <Run Text="{Binding ShownExample.Right}" FontSize="18" FontStyle="Italic"></Run>
+                <Run Text="{Binding ShownExample.Second}" FontSize="20" FontStyle="Italic" FontWeight="Bold"></Run>
+                <Run Text="{Binding ShownExample.Final}" FontSize="18" FontStyle="Italic"></Run>
                 </TextBlock>
             </DockPanel>
         </StackPanel>
