--- a/W.O.R.D.S/Views/Dictionary.xaml
+++ b/W.O.R.D.S/Views/Dictionary.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:W.O.R.D.S.Views"
         xmlns:converters="clr-namespace:W.O.R.D.S.Models.Converters"
         mc:Ignorable="d"
-        Title="Dictionary" Height="600" Width="900" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Dictionary" Height="600" Width="950" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="ButtonStyle">
             <Setter Property="Control.FontSize" Value="14"/>
@@ -23,6 +23,7 @@
         <converters:NoteConverter x:Key="NoteConverter" />
         <converters:NoteImageConverter x:Key="NoteImageConverter" />
         <converters:ExampleListConverter x:Key="ExampleListConverter" />
+        <converters:FavConverter x:Key="FavConverter" />
     </Window.Resources>
     <Grid Background="Gainsboro">
         <Grid.RowDefinitions>
@@ -77,6 +78,13 @@
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=Transcription}">Транскрипция</GridViewColumn>
+                    <GridViewColumn Header="★">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Image Width="16" Height="16" Margin="0,0,4,0" Source="{Binding Favorite, Converter={StaticResource FavConverter}}"></Image>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=Examples, Converter={StaticResource ExampleListConverter}}">Пример</GridViewColumn>
                     <!--<GridViewColumn DisplayMemberBinding="{Binding Path=Examples}">Пример
                         <GridViewColumn.CellTemplate>
@@ -94,6 +102,7 @@
 
         <StackPanel Grid.Row="1" Orientation="Horizontal">
             <TextBox Text="{Binding Search, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Background="PowderBlue" Width="198" FontSize="18" FontWeight="Bold" VerticalAlignment="Center" Margin="4,0,6,0"></TextBox>
+            <Button Command="{Binding FavCommand}" Background="Yellow" Style="{StaticResource ButtonStyle}" Width="40" Margin="0,0,6,0">★</Button>
             <Button Command="{Binding ResetCommand}" Background="Crimson" Style="{StaticResource ButtonStyle}" Margin="0,0,6,0">Удалить</Button>
             <Button Command="{Binding TestCommand}" Background="RoyalBlue" Style="{StaticResource ButtonStyle}" Margin="0,0,6,0">Индексировать</Button>
             <Button Command="{Binding EditCommand}" Background="Silver" Style="{StaticResource ButtonStyle}" Margin="0,0,6,0">Редактировать</Button>
@@ -105,7 +114,7 @@
             <TextBlock VerticalAlignment="Center" Margin="4,0,6,0">Слово:</TextBlock>
             <TextBox Text="{Binding WordName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="100" FontSize="16" VerticalAlignment="Center" Margin="4,0,6,0"></TextBox>
             <TextBlock VerticalAlignment="Center" Margin="4,0,6,0">Перевод:</TextBlock>
-            <TextBox Text="{Binding WordTranslation}" Width="100" FontSize="16" VerticalAlignment="Center" Margin="4,0,6,0">
+            <TextBox Text="{Binding WordTranslation}" Width="140" FontSize="16" VerticalAlignment="Center" Margin="4,0,6,0">
                 <TextBox.InputBindings>
                     <KeyBinding
                         Key="Return"
@@ -136,7 +145,7 @@
             <TextBlock VerticalAlignment="Center" Margin="4,0,6,0">Значение:</TextBlock>
             <TextBox Text="{Binding WordMeaning}" Width="200" FontSize="16" VerticalAlignment="Center" Margin="4,0,6,0"></TextBox>
             <TextBlock VerticalAlignment="Center" Margin="4,0,6,0">Пример:</TextBlock>
-            <TextBox Text="{Binding WordExample}" Width="185" FontSize="16" VerticalAlignment="Center" Margin="4,0,6,0"></TextBox>
+            <TextBox Text="{Binding WordExample}" Width="225" FontSize="16" VerticalAlignment="Center" Margin="4,0,6,0"></TextBox>
             <!--CheckBox IsChecked="{Binding NoExamples}" VerticalAlignment="Center" Margin="4,0,6,0">Ex</-->
             <TextBlock Text="{Binding ExNumber}" TextDecorations="Underline" VerticalAlignment="Center" Margin="4,0,6,0"></TextBlock>
             <CheckBox IsChecked="{Binding NoPartOfSpeech}" VerticalAlignment="Center">Ч</CheckBox>
